<resources>
    <string name="app_name">Salon Vendor</string>

    <string name="welcome_to_salonHome">Welcome to <font fgstyle="#0F52BA">Stalmate</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>

    <string name="permission_alert">Permission Alert</string>
    <string name="cancel_">Cancel</string>
    <string name="settings">Settings</string>
    <string name="we_need_storage_and_camera_permission_for_upload_profile_pic">We need external storage and camera permission for upload profile picture.</string>
    <string name="permission">Permission</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="add_photo_">Change Picture!</string>
    <string name="Terms_Condition_underLine"><u>Terms Conditions</u></string>
    <string name="Terms_Condition">Terms &amp; Conditions</string>
    <string name="Privacy_Policy_underLine"><u>Privacy Policy</u></string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Owner_Details"><u>Owner Details</u></string>
    <string name="salon_name">Salon Name :</string>
    <string name="bank_details"><u>Bank Details</u></string>
    <string name="salon_details"><u>Salon Details</u></string>
    <string name="appointment">Appointment</string>
    <string name="location">Location</string>
    <string name="add_amp_remove_service"><![CDATA[Add & Remove Service]]></string>
    <string name="_763940348093">763940348093</string>
    <string name="mobile_no">Mobile No.:</string>
    <string name="my_address_is_this">my address is this</string>
    <string name="sdklflksdjs_dsjkfds">sdklflksdjs,dsjkfds,</string>
    <string name="direction">Direction</string>
    <string name="mahesh">Mahesh</string>
    <string name="name">Name:</string>
    <string name="service">Service:</string>
    <string name="details">Details</string>
    <string name="address">Address:</string>
    <string name="haircut_skdfjdj">Haircut,skdfjdj</string>
    <string name="add_services">Add Services</string>
    <string name="see_all">See All</string>
    <string name="packages">Packages</string>
    <string name="salon_home">SALON HOME</string>
    <string name="manage_services">Manage Services</string>
    <string name="revenue">Revenue</string>
    <string name="salon">Salon</string>
    <string name="doorstep">DoorStep</string>
    <string name="no_record_available">No Record Available</string>
    <string name="female">Female</string>
    <string name="available">Available</string>
    <string name="male">Male</string>
    <string name="taken">Taken</string>
    <string name="manage_packages">Manage Packages</string>
    <string name="add_more">Add More</string>
    <string name="apply">Apply</string>
    <string name="gender">Gender</string>
    <string name="designation_name">Designation Name</string>
    <string name="edit_salon">Edit Salon</string>
    <string name="upload_license">Upload License</string>
    <string name="upload_id_proof">Upload ID Proof</string>
    <string name="enter_your_email_here">enter your email here</string>
    <string name="about_salon">About Salon...</string>
    <string name="enter_your_address_here">enter your address here</string>
    <string name="enter_your_salon_name">enter your salon name</string>
    <string name="submit">Submit</string>
    <string name="edit_gallery">Edit Gallery</string>
    <string name="appointment_tab_layout_desc">select Different type of appointments and perform actions according to their layouts</string>
    <string name="appointments">Appointments</string>
    <string name="skin_care">Skin Care</string>
    <string name="add_service">Add Service</string>
    <string name="hair_dryer">Hair Dryer</string>
    <string name="todo">TODO</string>
    <string name="offer_price">offer Price</string>
    <string name="optional">(optional)</string>
    <string name="hair_cut">Hair Cut</string>
    <string name="select_category">Select Category</string>
    <string name="mrp_price">MRP Price</string>
    <string name="service_name">select service</string>
    <string name="otp_not_recieved">OTP not recieved?</string>
    <string name="next">Next</string>
    <string name="enter_the_4_digit_otp_nsend_to">Enter the 4-digit OTP\nsend to</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="resend">Resend</string>
    <string name="notifications">Notifications</string>
    <string name="no_record_found">No Record Found!</string>
    <string name="welcome_to">Welcome to</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in">Sign in</string>
    <string name="mobile_number">Mobile number</string>
    <string name="_91">+91</string>
    <string name="owner_name">owner name</string>
    <string name="owner_email">owner email</string>
    <string name="edit_owner">Edit Owner</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="designation">Designation</string>
    <string name="add_staff">Add Staff</string>
    <string name="phone_no">Phone No</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="the_best_barber_amp_salon_app_in_this_ncentury_for_your_good_looks_and_beauty"><![CDATA[The Best barber & Salon app in this\ncentury for your good looks and beauty]]></string>
    <string name="vendor_type">Vendor Type</string>
    <string name="fill_your_profile">Fill your Profile</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="mens">Mens</string>
    <string name="service_provided_for">Service Provided For</string>
    <string name="womens">Womens</string>
    <string name="unisex">Unisex</string>
    <string name="shop_name">Shop Name</string>
    <string name="door_buddy">Door Buddy</string>
    <string name="staff">Staff</string>
    <string name="add_client">"Add Client "</string>
    <string name="namehint">Name</string>
    <string name="no_value">___</string>
    <string name="payment">Payment:</string>
    <string name="ddmmyyyy">DD/MM/YYYY</string>
    <string name="mywallet">My Wallet</string>
    <string name="cover_range">Cover Range</string>
    <string name="select_your_range_for">Select Your range for</string>
    <string name="doorstep_services">doorstep Services</string>
    <string name="save">Save</string>
    <string name="_10_km">10 km</string>
    <string name="google_maps_api_key">AIzaSyATW5jE8FZwyqSqf6-9tWIswj-JH-Gg7Fg</string>
    <string name="online">Online</string>
    <string name="completed">Completed</string>
    <string name="cancelled">" Cancelled "</string>
    <string name="appointment_status">Appointment Status :</string>
    <string name="edit_staff">\"Edit Staff \"</string>


</resources>