<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/splash"
    android:padding="10dp"
    android:adjustViewBounds="true"
    android:layout_height="match_parent"
    tools:context=".activity.SplashScreen">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/discription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:text="@string/the_best_barber_amp_salon_app_in_this_ncentury_for_your_good_looks_and_beauty"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:fontFamily="@font/inter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/discription"
        app:layout_constraintEnd_toEndOf="@+id/discription"
        app:layout_constraintStart_toStartOf="@+id/discription">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/salon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salon_home"
            android:textColor="#FFFFFF"
            android:textSize="45sp"
            app:fontFamily="@font/cinzel_decorative_bold"
            app:layout_constraintEnd_toEndOf="@+id/welcome_to"
            app:layout_constraintStart_toStartOf="@+id/welcome_to"
            app:layout_constraintTop_toBottomOf="@+id/welcome_to" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>