<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CategoryDetails">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:id="@+id/swipe_refresh_Layout"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="9dp"
        android:layout_height="wrap_content"
        android:id="@+id/service_head"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="27dp"
            android:layout_height="23dp"
            android:id="@+id/btn_back"
            android:src="@drawable/arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            android:id="@+id/tv_header"
            android:textSize="19sp"
            android:text="@string/add_service"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="19dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#E0E0E0"
        android:id="@+id/heading_line"
        app:layout_constraintTop_toBottomOf="@id/service_head"
        app:layout_constraintStart_toStartOf="@id/service_head"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="@id/service_head"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/heading_line"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:id="@+id/switch_lay"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_room_availability"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:checked="true"
                android:textOff="@string/taken"
                android:textOn="@string/available"
                android:thumb="@drawable/custom_thumb"
                app:switchMinWidth="80dp"
                app:track="@drawable/custom_track"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/MaleTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:paddingStart="12dp"
                android:text="@string/male"
                android:paddingEnd="0dp"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/femaleTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:paddingEnd="12dp"
                android:text="@string/female"
                android:paddingStart="0dp"
                android:textColor="@color/pink_colr"
                android:textSize="11sp"
                android:visibility="gone" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/service_items_list"
            app:layout_constraintTop_toBottomOf="@id/switch_lay"
            tools:listitem="@layout/service_item"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="63dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D63226"
                android:id="@+id/show_no_data_text"
                android:textSize="23dp"
                android:fontFamily="@font/poppins_semibold"
                android:visibility="gone"
                android:layout_marginTop="23dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="No Record Available "
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_gravity="center"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <androidx.cardview.widget.CardView
    android:id="@+id/button_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/salon_button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/bg_saloonbutton"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="15dp"
            android:text="@string/salon"
            android:textAllCaps="false"
            android:textColor="#0D47A1"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toStartOf="@+id/DoorStep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/DoorStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/cardcorner_whit_cut"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginHorizontal ="5dp"
            android:paddingVertical="15dp"
            android:layout_marginVertical="5dp"
            android:text="@string/doorstep"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/salon_button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/salon_button3"
            app:layout_constraintTop_toTopOf="@+id/salon_button3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
