<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.CoverRangeActivity">
        <!--<ScrollView-->
        <!--    android:layout_width="match_parent"-->
        <!--    android:layout_height="match_parent"-->
        <!--    >-->
        <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent"-->
        <!--        >-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrow_back"
            android:paddingStart="15sp"
            android:src="@drawable/arrow_back"
            android:paddingEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/heading_coverrange"
            app:layout_constraintTop_toTopOf="@id/heading_coverrange"
            app:layout_constraintBottom_toBottomOf="@id/heading_coverrange"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heading_coverrange"
            android:text="@string/cover_range"
            android:fontFamily="@font/poppins_medium"
            android:textSize="20sp"
            android:textColor="#212121"
            android:layout_marginTop="20sp"
            android:layout_marginStart="52dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/arrow_back" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading_coverrange"
            android:backgroundTint="@color/black"
            android:layout_marginTop="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select"
            android:textSize="17sp"
            android:layout_marginTop="33dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#000000"
            android:text="@string/select_your_range_for"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:text="@string/doorstep_services"
            android:textSize="17sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#000000"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="293dp"
            app:layout_constraintTop_toBottomOf="@id/text"
            android:id="@+id/map_lays"
            android:layout_marginTop="48sp"

            app:cardCornerRadius="10sp"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/todo" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.marcinmoskala.arcseekbar.ArcSeekBar
            android:layout_width="300dp"
            app:layout_constraintTop_toBottomOf="@id/map_lays"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:roundEdges="true"
            android:id="@+id/progress_Arcs"
            app:progress="30"
            android:layout_height="114dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_km"
            android:layout_width="83dp"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/save"
            android:layout_marginBottom="27dp"
            android:backgroundTint="#F8F8F8"
            app:cardCornerRadius="7dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:id="@+id/txt_kms"
                    android:text="@string/_10_km"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="50sp"
            app:layout_constraintWidth_percent="0.6"
            android:background="@drawable/rectangle_oval"
            android:backgroundTint="#87CFD6"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10sp"
            android:paddingTop="10sp"
            />
        <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
        <!--</ScrollView> -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
